--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-	"name": "swiper-select-viewport",
+	"name": "swiper-dropdown-viewport",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "vite build && gh-pages -d dist"
 	},
+	"homepage": "https://StarkElessar.github.io/swiper-dropdown-viewport",
 	"devDependencies": {
 		"typescript": "~5.7.2",
 		"vite": "^6.2.0"
 	},
 	"dependencies": {
+		"gh-pages": "^6.3.0",
 		"swiper": "^11.2.5"
 	}
 }
